--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.0.5
   uuid: ^3.0.5
+  syncfusion_flutter_xlsio: ^19.3.48-beta
+  permission_handler: ^8.2.5
+  excel: ^2.0.0-null-safety-3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
